# encryption-app

./: .gitignore  Cargo.toml  README.md  justfile
src/: crypto.rs  iced_missing.rs  main.rs
src/tools/: color.rs
