[package]
name = "encryption-app"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
argon2 = "0.5.3"
crypto-bigint = "0.6.1"
hex = "0.4.3"
iced = { version = "0.13.1", features = ["highlighter", "tokio"] }
# iced addl widgets
iced_aw = "0.12.2"
iced_font_awesome = "0.2.1"
iced_modern_theme = "0.1.6"
iced-optional-element-shim = "0.1.1"

# https://crates.io/crates/iced_font_awesome
# https://crates.io/crates/iced_toasts
# https://crates.io/crates/iced_aw

# rusty native file dialog
rfd = "0.15.4"
tokio = { version = "1.48.0", features = ["fs", "io-util", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[profile.release]
opt-level = 3
strip="symbols"
